--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dayjs": "^1.11.18",
     "expo": "~54.0.2",
     "expo-constants": "~18.0.10",
+    "expo-location": "^19.0.7",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "lucide-react-native": "^0.548.0",
