--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "axios": "^1.13.1",
     "dayjs": "^1.11.18",
     "expo": "~54.0.2",
+    "expo-apple-authentication": "^8.0.7",
     "expo-constants": "~18.0.10",
     "expo-location": "^19.0.7",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
+    "firebase": "^12.5.0",
     "lucide-react-native": "^0.548.0",
     "react": "19.1.0",
     "react-hook-form": "^7.65.0",
