--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "expo": "~54.0.2",
     "expo-apple-authentication": "^8.0.7",
     "expo-constants": "~18.0.10",
+    "expo-device": "^8.0.9",
+    "expo-linking": "^8.0.9",
     "expo-location": "^19.0.7",
+    "expo-notifications": "^0.32.13",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.5.0",
@@ -33,13 +36,13 @@
     "react-hook-form": "^7.65.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-maps": "1.20.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-worklets": "0.5.1",
+    "socket.io-client": "^4.8.1",
     "zod": "^3.25.76",
     "zustand": "^4.5.7"
   },
